<resources>
    <string name="app_name">Maxim Bazunov - Surf - Cocktail Bar</string>

    <!--UI-->
    <string name="uiMenu">Menu</string>
    <string name="uiAppName">App name</string>
    <string name="uiSavedSearchActive">Active saved search</string>
    <string name="uiSavedSearches">Saved searches</string>
    <string name="uiSaveNews">Save this news</string>
    <string name="uiUnSaveNews">Delete this news from the saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--My cocktails-->
    <string name="textMain">My cocktails</string>
    <string name="textInfo">Add your first cocktail here</string>


    <!--Cocktail create/change-->
    <string name="cocktailCreateTitle">Title</string>
    <!--<string name="cocktailCreateTitleContent">...</string>-->
    <string name="cocktailCreateDescription">Description</string>
    <!--<string name="cocktailCreateDescriptionContent">...</string>-->
    <string name="cocktailCreateIngredients">Ingredients</string>
    <!--<string name="cocktailCreateIngredientsContent">...</string>-->
    <string name="cocktailCreateRecipe">Recipe:</string>
    <!--<string name="cocktailCreateRecipeContent">...</string>-->

    <string name="optional">Optional field</string>
    <string name="addTitle">add Title</string>
    <string name="addIngredients">add Ingredients</string>

    <string name="cocktailCreateButtonSave">Save</string>
    <string name="cocktailCreateButtonCancel">Cancel</string>
    <!--<string name="cocktailCreateButtonCancel">Cancel Example Detail</string>-->


    <!--Cocktail detail-->
    <string name="cocktailRecipeTitle">Recipe:</string>
    <string name="cocktailButtonEdit">Edit</string>
    <string name="cocktailButtonDelete">Delete</string>

    <!--Cocktail detail example-->
    <string name="cocktailTitleExample">Mojito mocktail</string>
    <string name="cocktailDescriptionExample">To make this homemade lemonade, simply combine all the ingredients in a pitcher.</string>
    <string name="cocktailIngredientsExample">9 cups sprite * small bunch mint * 3 limes, juiced</string>
    <string name="cocktailRecipeContentExample">Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed.</string>


    <!--Exit App-->
    <string name="exitApp">Once again to exit!</string>
</resources>