<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.MyCocktailsDetail">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_gravity="start"
        android:scaleType="centerCrop"
        android:src="@drawable/cocktail_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="270dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="56dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/textViewCocktailRecipeTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewCocktailDetailTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/didactgothic_regular"
                                android:gravity="center"
                                android:text="@string/cocktailTitleExample"
                                android:textSize="@dimen/textDetailTitle" />

                            <TextView
                                android:id="@+id/textViewCocktailDetailDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/didactgothic_regular"
                                android:gravity="center"
                                android:text="@string/cocktailDescriptionExample"
                                android:textSize="@dimen/textDetailDescription" />

                            <TextView
                                android:id="@+id/textViewCocktailIngridients"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/didactgothic_regular"
                                android:gravity="center"
                                android:text="@string/cocktailIngredientsExample"
                                android:textSize="@dimen/textDetailIngredients" />

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewCocktailRecipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/didactgothic_regular"
                    android:gravity="center"
                    android:text="@string/cocktailRecipeTitle"
                    android:textSize="@dimen/textDetailRecipeTitle"
                    app:layout_constraintBottom_toTopOf="@+id/textViewCocktailRecipeContent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textViewCocktailRecipeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/didactgothic_regular"
                    android:gravity="center"
                    android:text="@string/cocktailRecipeContentExample"
                    android:textSize="@dimen/textDetailRecipeContent"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMyCocktailDetailEdit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/buttonMyCocktailDetailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/didactgothic_regular"
                    android:text="@string/cocktailButtonEdit"
                    android:textSize="@dimen/button"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMyCocktailDetailDelete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/buttonMyCocktailDetailDelete"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/fontInfo"
                    android:fontFamily="@font/didactgothic_regular"
                    android:text="@string/cocktailButtonDelete"
                    android:textSize="@dimen/button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>